--- a/cookiebox.css
+++ b/cookiebox.css
@@ -234,28 +234,34 @@
  * http://www.opensource.org/licenses/GPL-2.0
  */
 
+/*
 body
 {
 	position: relative;
-}
+}*/
 
-#CookieBox
+.CookieBox
 {
 	background: #fff;
 	display: block;
 	font-size: 1em;
+	padding: 20px;
+	width: 400px;
+	
+	-webkit-border-radius: 10px;
+	border-radius: 10px; 
+
+	-webkit-box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, .2);
+	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, .2); 
+}
+
+.CookieBox.slide
+{
 	top: -20px;
 	right: 50px;
 	padding: 40px 20px 20px 20px;
 	position: absolute;
-	width: 400px;
 	z-index: 9999;
-	
-	-webkit-border-radius: 0px 0px 10px 10px;
-	border-radius: 0px 0px 10px 10px; 
-
-	-webkit-box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, .2);
-	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, .2); 
 }
 
 .CookieBoxTitle
